New in spot 2.5.1.dev (not yet released)

  Library:

  - Option "a" of print_dot(), for printing the acceptance condition,
    is now enabled by default.  Option "A", introduced in Spot 2.4,
    can be used to hide the acceptance condition in case you do not
    want it.  This change of course affects the --dot option of all
    the command-line tools, as well as the various way to display
    automata using the Python bindings.

  - cleanup_parity() and cleanup_parity_here() are smarter and now
    remove from the acceptance condition the parity colors that are
    not used in the automaton.

  - twa_graph::purge_unreachable_states() now takes a function which
    is called with the new numbering of states. This is useful to
    update an external structure that references states of the twa
    that we want to purge.

  - the PSL simplification routines learned that {SERE;1} can be
    simplified to {1} or {SERE} depending on whether SERE accepts
    the empty word or not.

  Bugs fixed:

  - acc_cond::is_generalized_rabin() and
    acc_cond::is_generalized_streett() would segfault on weird
    acceptance conditions such as "3 t" or "3 f".

  - remove_fin(), streett_to_generalized_buchi() should never
    return automata with "f" acceptance.

  - "autfilt --acceptance-is=Fin-less" no longer accept automata
    with "f" acceptance.

  - twa_run methods will now diagnose cases where the cycle is
    unexpectedly empty instead of segfaulting.

New in spot 2.5.1 (2018-02-20)

  Library:

  - iar() and iar_maybe() now also handle Streett-like conditions.

  Bugs fixed:

  - iar() and iar_maybe() properly handle Rabin-like conditions.

  - streett_to_generalized_buchi() could produce incorrect result on
    Streett-like input with acceptance like (Inf(0)|Fin(1))&Fin(1)
    where some Fin(x) is used both with and without a paired Fin(y).

  - is_generalized_rabin() had a typo that caused some non-simplified
    acceptance conditions like Fin(0)|(Fin(0)&Inf(1)) to be