@@ -305,6 +305,7 @@ TESTS_twa = \
   core/autcross.test \
   core/autcross2.test \
   core/autcross3.test \
+  core/autcross4.test \
   core/complementation.test \
   core/randpsl.test \
   core/cycles.test \
