@@ -1,0 +1,53 @@
+#!/bin/sh
+# -*- coding: utf-8 -*-
+# Copyright (C) 2018 Laboratoire de Recherche et Développement de
+# l'Epita (LRDE).
+#
+# This file is part of Spot, a model checking library.
+#
+# Spot is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Spot is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
+# License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test the timeout handling of autcross.
+. ./defs
+set -e
+
+ltl2tgba -f FGa '"a = b"U!c' |
+    autcross 'autfilt' 'ltl2tgba -B %M >%O' --csv=out.csv
+test 2 = `grep -c '"FGa"' out.csv`
+test 2 = `grep -c '"""a = b"" U !c"' out.csv`
+
+
+cat >in <<EOF
+HOA: v1
+name: "yes"
+States: 1
+Start: 0
+AP: 0
+Acceptance: 0 t
+--BODY--
+State: 0
+--END--
+HOA: v1
+States: 1
+Start: 0
+AP: 0
+Acceptance: 0 t
+--BODY--
+State: 0
+--END--
+EOF
+
+autcross -Fin 'ltl2tgba %[no]M>%O' 'ltl2tgba %M>%O' --csv=out.csv && exit 1
+test 3 = `grep -c '"ok"' out.csv`
+
